k8s/traefik-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:3.6.6
          args:
            - "--api.insecure=true"
            - "--api.dashboard=true"
            - "--providers.consulCatalog"
            - "--providers.consulCatalog.refreshInterval=5s"
            - "--providers.consulCatalog.exposedByDefault=false"
            - "--providers.consulCatalog.endpoint.address=consul:8500"
            - "--entrypoints.http.address=:8888"
          ports:
            - name: http
              containerPort: 8888
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8888
      nodePort: 30080
    - name: admin
      port: 8080
      targetPort: 8080
      nodePort: 30081
  selector:
    app: traefik
